Removed root page header message. Fixed display wrapping on ad-show page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -776,7 +776,7 @@
 .cats-container {
 /*	border: 1px solid red;*/
 	width: 840px;
-	margin: 50px auto;
+	margin: 75px auto;
 	background: #999;
 	border-radius: 3px;
 	padding: 0 0 30px 30px;
